# seeing-is-healing

./: .gitattributes  .gitignore  AGENTS.md
.claude/skills/applying-brand-guidelines/: metadata.json
.github/workflows/: desktop-build.yml  pages.yml
desktop/: .gitignore  README.md  main.js  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: 404.html  __next.__PAGE__.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
docs/_not-found/: __next._head.txt  __next._tree.txt  index.txt
docs/_not-found/__next._not-found/: __PAGE__.txt
docs/decks/: __next._full.txt  __next._index.txt  __next._tree.txt  index.html
docs/decks/__next.decks/: __PAGE__.txt
docs/decks/beauragard/: __next._full.txt  __next._tree.txt  index.html
docs/decks/child/: __next._full.txt  __next._tree.txt  index.html
docs/decks/chinamyth/: __next._tree.txt  index.html  index.txt
docs/decks/classic/: __next._full.txt  __next._tree.txt  index.html
docs/decks/cope/: __next._tree.txt  index.html  index.txt
docs/decks/cuisine/: __next._full.txt  __next._tree.txt  index.html
docs/decks/ecco/: __next._full.txt  __next._tree.txt  index.html
docs/decks/habitat/: __next._full.txt  __next._tree.txt  index.html
docs/questions/: __next._full.txt  __next._tree.txt  index.html
docs/spreads/: __next._index.txt  __next._tree.txt  index.html  index.txt
docs/themes/: __next._index.txt  __next._tree.txt  index.html  index.txt
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+499 files in other folders)
