[package]
name = "seeing-is-healing"
version = "0.1.0"
description = "Seeing-is-Healing · OH Card Knowledge Base Desktop"
edition = "2021"
rust-version = "1.77"

[lib]
name = "seeing_is_healing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
